/admin/resetstations Implementation
